2008-01-11  Adam Roben  <aroben@apple.com>

        * platform/win/Skipped: Added some new failures.

2008-01-10  Stephanie  <slewis@apple.com>

        RS=Oliver.

        Move svg/batik/text/smallfonts.svg to the right skip list.

        * platform/mac-tiger/Skipped:
        * platform/mac/Skipped:

2008-01-10  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Tests for http://bugs.webkit.org/show_bug.cgi?id=16522
        <rdar://problem/5657355>

        * http/tests/security/frameNavigation/resources/frame-with-link-to-navigate.html: Added.
        * http/tests/security/frameNavigation/resources/frame-with-plugin-to-navigate.html: Added.
        * http/tests/security/frameNavigation/resources/navigation-happened.html: Added.
        * http/tests/security/frameNavigation/xss-DENIED-plugin-navigation-expected.txt: Added.
        * http/tests/security/frameNavigation/xss-DENIED-plugin-navigation.html: Added.
        * http/tests/security/frameNavigation/xss-DENIED-targeted-link-navigation-expected.txt: Added.
        * http/tests/security/frameNavigation/xss-DENIED-targeted-link-navigation.html: Added.
        * platform/win/Skipped:

2008-01-10  Adam Roben  <aroben@apple.com>

        * platform/win/Skipped: Removed a test that was fixed in r26826.

2008-01-10  Adam Roben  <aroben@apple.com>

        * platform/win/Skipped: Removed a test that was fixed in r28372.

2008-01-10  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Adam Roben.

        <rdar://problem/5667003> fast/dom/xmlhttprequest-html-response-encoding.html is failing

        * platform/win/Skipped: Remove the fixed test.

2008-01-10  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin, Sam, and Adam.

        -<rdar://problem/5654486> REGRESSION (Safari 3.0.4-TOT): clicking on
        link in gmail message displays JavaScript alert falsely complaining
        about pop-up blocking