@@ -1,3 +1,11 @@
+2008-01-11  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Adam Roben.
+
+        <rdar://problem/5667275> fast/dynamic/layer-hit-test-crash.html is failing
+
+        * platform/win/Skipped: The test now passes.
+
 2008-01-11  Adam Roben  <aroben@apple.com>
 
         * platform/win/Skipped: Added some new failures.
